# serde_examples

./: Cargo.toml  av.avsc  cc.avsc  ge2.avsc  j.json  new_simulated_can  new_simulated_imu  out.json  raw_bytes  simulated_imu
src/: main.rs
