[package]
name = "avr_ser"
version = "0.1.0"
authors = ["Amit Kumar <amit.kumar@atherenergy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#avro-rs = { git = "https://github.com/flavray/avro-rs", branch = "master" }
avro-rs = "0.9.0"

failure = "0.1.5"
serde = {version = "1.0", features=["derive"]}
serde_json = "1"
derive_more = "0.15"
flate2 = "1.0.16"
# avrow = {version = "0.1.0", features=["all"]}